--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -261,29 +261,47 @@ header
   .title
     color #555555
     padding-bottom 15px
+.boxes-project
+  &:nth-child(3)
+    .col-md-4,.col-sm-4
+      float right
+    .col-md-8,.col-sm-8
+      text-align right
+  &:nth-child(5)
+    .col-md-4,.col-sm-4
+      float right
+    .col-md-8,.col-sm-8
+      text-align right
+.work-description
+  margin-top 100px
+  h3
+    color #555
 .recent-work-wrap > .titles
   position absolute
   width 100%
   height 100%
   top 0px
+  border-radius 50%
   text-align center
   font-size 24px
   padding 80px 20px 10px
   color #fff
-  background rgba(224, 143, 23, 0.6)
+  background rgba(0,0,0,0.1)
   text-shadow 0 0 10px #000
 #recent-works
   padding 60px 0
   .title
+    padding-bottom 40px
     h1
       color #555
 
 .recent-work-wrap
   position relative
-  margin 30px
-  height 250px
+  margin 15px
+  height 300px
   background-size cover
   background-position center center
+  border-radius 50%
 
 .recent-work-wrap img
   width 100%
@@ -309,8 +327,8 @@ header
   left 0
   width 100%
   height 100%
+  border-radius 50%
   opacity 0
-  border-radius 0
   background #E08F17
   color #fff
   vertical-align middle
