--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,11 +2,10 @@
     <uib-carousel interval="5000" template-url="/templates/partials/carousel.html">
         <uib-slide ng-repeat="slide in Home.mainSlider">
             <div class="slider-img" style="background-image:url('{{ slide.urlImages.large }}');"></div>
+            <div class="carousel-caption">
+                <h3><a post-link="{ link: {url: slide.link, target: '_self'} }" style="color: #fff;">{{ slide.excerpt }}</a></h3>
+            </div>
         </uib-slide>
-        <div class="carousel-caption">
-            <h3>Tú Jóven que estás comenzando a construir tu futuro contamos con los
-                los mejores planes de financiamiento, para ese proyecto que tanto anhelas</h3>
-        </div>
     </uib-carousel>
 </div>
 
