--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -11,17 +11,17 @@
 
                         <div class="social">
                             <a href="tel:3531281375">
-                                <i class="fa fa-phone"></i> 353 128 13 75
+                                <i class="fa fa-phone"></i> (33) 3880 12 34
                             </a>
                         </div>
                         <div class="social">
                             <a href="tel:3531020871">
-                                <i class="fa fa-whatsapp"></i> 353 102 0871
+                                <i class="fa fa-print"></i> Fax (33) 3880 12 00
                             </a>
                         </div>
                         <div class="social">
                             <a href="mailto:clientes@remolquesmagu.com">
-                                <i class="fa fa-envelope-o"></i> info@viveenarmonia.com.mx
+                                <i class="fa fa-envelope-o"></i> info@loredoyasociados.com.mx
                             </a>
                         </div>
                     </div>
