--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,14 +1,5 @@
 <div class="container">
-    <div class="text-center contact-footer">
-        <a href="tel:353 128 13 75"><i class="fa fa-phone"></i> 01 353 128 13 75</a> |
-        <a href="tel:353 128 13 75"><i class="fa fa-whatsapp"></i> 353 102 0871</a> |
-        <a href="mailto:contacto@viveenarmonia.com.mx"><i class="fa fa-envelope"></i> contacto@viveenarmonia.com.mx</a>
-    </div>
-    <div class="text-center contact-footer">
-        <a ui-sref="page({slug: 'aviso-de-privacidad1464721005'})"> Aviso de privacidad</a> |
-        <a ui-sref="page({slug: 'terminos-y-condiciones1464721081'})"> Términos y condiciones</a>
-    </div>
     <p class="text-center text">
-        2016. Vida en Armonía ®. Todos los derechos reservados
+        2016 - Loredo & Asociados
     </p>
 </div>
