--- a/app/css/main.css
+++ b/app/css/main.css
@@ -107,8 +107,8 @@ body {
   }
 }
 header .navbar-default {
-  background: #fff;
-  height: 100px;
+  background: #33261e;
+  height: 110px;
   border: none;
   border-radius: 0;
   -webkit-box-shadow: 0 0 15px rgba(0,0,0,0.43);
@@ -121,20 +121,24 @@ header .navbar-default .navbar-brand {
   padding: 5px 15px;
 }
 header .navbar-default .navbar-nav > li > a {
-  color: #5d5d5d;
-  padding: 40px 18px;
-  font-size: 18px;
+  color: #f2dec7;
+  padding: 45px 10px 15px;
+  font-size: 17px;
   font-family: 'Poppins', sans-serif;
-  font-weight: 500;
+  font-weight: 300;
+  -webkit-transition: all ease-in-out 0.35s;
+  -o-transition: all ease-in-out 0.35s;
+  transition: all ease-in-out 0.35s;
 }
 header .navbar-default .navbar-nav > li > a:hover,
 header .navbar-default .navbar-nav > li > a:focus {
   background-color: transparent;
-  color: #389c80;
+  color: #fff;
+  border-bottom: 3px solid #fff;
 }
 header .navbar-default .navbar-nav .dropdown:hover .dropdown-toggle {
   background-color: transparent;
-  color: #389c80;
+  color: #f2dec7;
 }
 header .navbar-default .navbar-nav .dropdown .dropdown-menu {
   width: 100%;
@@ -157,18 +161,22 @@ header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a:hover {
 }
 header .logo {
   width: auto;
-  margin-top: 10px;
+  margin-top: 0px;
 }
 .slider-img {
   background-position: center center;
   background-size: cover;
-  height: 650px;
+  height: 600px;
   background-repeat: no-repeat;
   margin-top: 100px;
 }
 .carousel-caption {
-  top: 42%;
+  top: 25%;
   width: 60%;
+  text-align: left;
+  left: 6%;
+  right: 10%;
+  opacity: 0.8;
 }
 .carousel-caption h3 {
   text-shadow: 0 0 10px #000;
@@ -177,15 +185,8 @@ header .logo {
 .carousel-caption .text {
   margin-top: 40px;
 }
-.carousel-caption .box-mail {
-  background: rgba(255,255,255,0.8);
-  border-radius: 3px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.22);
-  padding: 15px;
-}
-.carousel-caption .box-mail h4 {
-  color: #5d5d5d;
-  text-shadow: none;
+.carousel-caption p {
+  font-size: 22px;
 }
 #slider-area {
   background: url("../img/bg.jpg");
@@ -222,7 +223,7 @@ header .logo {
   clear: both;
 }
 #content-area .title-post .title {
-  color: #e08f17;
+  color: #55504e;
   line-height: 40px;
   margin-bottom: 0;
   font-size: 26px;
@@ -246,6 +247,84 @@ header .logo {
   opacity: 0.3;
   padding: 20px 0;
   color: #ffa500;
+}
+#contact {
+  background: #55504e;
+}
+#contact .divider {
+  border-color: #f2dec7;
+}
+#contact h3 {
+  color: #f2dec7;
+}
+#contact .contact-us {
+  padding: 15px 0;
+}
+#contact .contact-us h4 > a,
+#contact .contact-us h4 {
+  color: #f2dec7;
+  line-height: 35px;
+  font-weight: 300;
+}
+#presence {
+  padding: 130px 0;
+}
+#presence .description h2 {
+  color: #584e48;
+}
+#presence .description p {
+  color: #584e48;
+  font-size: 20px;
+  text-align: justify;
+}
+#presence .description .process h2 {
+  color: #584e48;
+}
+#presence .description .process p {
+  color: #584e48;
+  font-size: 20px;
+  text-align: justify;
+}
+#politics .description h2 {
+  color: #584e48;
+}
+#politics .description p {
+  color: #584e48;
+  font-size: 20px;
+  text-align: justify;
+}
+#contract {
+  background-image: url("../img/parallax.jpg");
+  background-position: center center;
+  background-size: cover;
+  padding: 130px 0;
+}
+#contract .description {
+  text-align: center;
+}
+#contract .description h2 {
+  color: #f2dec1;
+  text-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+#contract .description p {
+  color: #f2dec1;
+  font-size: 20px;
+  text-align: justify;
+  text-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+#who-are {
+  padding: 130px 0;
+}
+#who-are .description {
+  margin-top: 30px;
+  padding-left: 20px;
+}
+#who-are .description h2 {
+  color: #584e48;
+}
+#who-are .description p {
+  color: #584e48;
+  font-size: 20px;
 }
 #product-detail {
   margin: 100px 0;
@@ -278,7 +357,7 @@ header .logo {
   text-shadow: 0 0 10px #000;
 }
 #content-contact {
-  background-image: url("../img/background.jpg");
+  background: #f9ece1;
   background-position: center center;
   background-size: cover;
 }
@@ -286,39 +365,25 @@ header .logo {
   color: #555;
   padding-bottom: 15px;
 }
-.boxes-project:nth-child(3) .col-md-4,
-.boxes-project:nth-child(3) .col-sm-4 {
-  float: right;
-}
-.boxes-project:nth-child(3) .col-md-8,
-.boxes-project:nth-child(3) .col-sm-8 {
-  text-align: right;
-}
-.boxes-project:nth-child(5) .col-md-4,
-.boxes-project:nth-child(5) .col-sm-4 {
-  float: right;
-}
-.boxes-project:nth-child(5) .col-md-8,
-.boxes-project:nth-child(5) .col-sm-8 {
-  text-align: right;
-}
 .work-description {
   margin-top: 100px;
 }
 .work-description h3 {
   color: #555;
 }
+.recent-work-wrap > .titles h3 {
+  margin-top: 110px;
+}
 .recent-work-wrap > .titles {
+  border: 1px solid rgba(255,255,255,0.2);
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0px;
-  border-radius: 50%;
   text-align: center;
   font-size: 24px;
-  padding: 80px 20px 10px;
-  color: #fff;
-  background: rgba(0,0,0,0.1);
+  color: #f2dec7;
+  background: rgba(41,29,20,0.75);
   text-shadow: 0 0 10px #000;
 }
 #recent-works {
@@ -332,11 +397,9 @@ header .logo {
 }
 .recent-work-wrap {
   position: relative;
-  margin: 15px;
-  height: 300px;
+  height: 250px;
   background-size: cover;
   background-position: center center;
-  border-radius: 50%;
 }
 .recent-work-wrap img {
   width: 100%;
@@ -363,7 +426,6 @@ header .logo {
   left: 0;
   width: 100%;
   height: 100%;
-  border-radius: 50%;
   opacity: 0;
   background: #e08f17;
   color: #fff;
@@ -587,10 +649,9 @@ color
   width: 100%;
 }
 #footer_area {
-  background: #f5f5f5;
-  box-shadow: 0 -3px 2px rgba(0,0,0,0.2);
+  background: #fff;
   padding: 30px 0;
-  color: #999;
+  color: #55504e;
   line-height: 30px;
 }
 #footer_area .contact-footer a {
@@ -706,10 +767,29 @@ color
   background: #fff;
   display: inline-block;
   padding: 10px 15px;
-  color: #ff801a;
+  color: #33261e;
   font-weight: 700;
   border-radius: 5px;
   border: 3px solid #fff;
+}
+.btn-coffee-clear {
+  background: transparent;
+  display: inline-block;
+  padding: 10px 15px;
+  color: #574d47;
+  font-weight: 700;
+  border: 3px solid #574d47;
+  border-radius: 5px;
+}
+.btn-coffee-clear:hover,
+.btn-coffee-clear:focus {
+  background: #574d47;
+  display: inline-block;
+  padding: 10px 15px;
+  color: #fff;
+  font-weight: 700;
+  border-radius: 5px;
+  border: 3px solid #574d47;
 }
 .facebook {
   color: #666;
@@ -793,7 +873,7 @@ color
   box-shadow: ease-in-out 0.15s;
 }
 .form-control:focus {
-  border-color: #389c80;
+  border-color: #33261e;
   outline: 0;
   -webkit-box-shadow: 0 0 0 9px rgba(0,0,0,0);
   box-shadow: 0 0 0 9px rgba(0,0,0,0);
