--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,16 +1,13 @@
 <div class="carousel slide" id="carousel-home">
     <uib-carousel interval="5000" template-url="/templates/partials/carousel.html">
-        <uib-slide>
+        <uib-slide ng-repeat="slide in Home.mainSlider">
             <a post-link="{ link: {url: slide.link, target: '_self'} }">
-                <div class="slider-img" style="background-image:url('img/slider.jpg');"></div>
+                <div class="slider-img" style="background-image:url('{{ slide.urlImages.original }}');"></div>
                 <div class="carousel-caption">
 
-                    <h3>¿Qué puede Usted esperar de nosotros? </h3>
+                    <h3>{{ slide.title }}</h3>
 
-                    <p>Le invitamos a conocer nuestra firma de abogados, con seguridad le espera un equipo dinámico de
-                        profesionales
-                        con visión multidisciplinar que integra tanto el asesoramiento
-                        Jurídico como el Económico y el Fiscal.</p>
+                    <p>{{ slide.excerpt }}</p>
 
                 </div>
             </a>
