--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -53,7 +53,7 @@ h6
 p
   font-family 'Poppins', sans-serif
   font-weight 300
-  font-size 14px
+  font-size 16px
 
 body
   font-family 'Poppins', sans-serif !important
@@ -151,7 +151,7 @@ header
 
   .logo
     width auto
-    margin-top 0px
+    margin-top 0
 
 /********************************/
 .slider-img
@@ -310,7 +310,7 @@ header
     position absolute
     width 100%
     height 100%
-    top 0px
+    top 0
     text-align center
     font-size 24px
     padding 80px 20px 10px
@@ -337,7 +337,7 @@ header
   position absolute
   width 100%
   height 100%
-  top 0px
+  top 0
   text-align center
   font-size 24px
   color #f2dec7
