--- a/app/css/main.css
+++ b/app/css/main.css
@@ -51,7 +51,7 @@ h6 {
 p {
   font-family: 'Poppins', sans-serif;
   font-weight: 300;
-  font-size: 14px;
+  font-size: 16px;
 }
 body {
   font-family: 'Poppins', sans-serif !important;
@@ -161,7 +161,7 @@ header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a:hover {
 }
 header .logo {
   width: auto;
-  margin-top: 0px;
+  margin-top: 0;
 }
 .slider-img {
   background-position: center center;
@@ -348,7 +348,7 @@ header .logo {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0px;
+  top: 0;
   text-align: center;
   font-size: 24px;
   padding: 80px 20px 10px;
@@ -379,7 +379,7 @@ header .logo {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0px;
+  top: 0;
   text-align: center;
   font-size: 24px;
   color: #f2dec7;
