--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -25,7 +25,7 @@
     </div>
     <div class="box-body">
         <ul class="list-group">
-            <li class="list-group-item"><a href="mailto:info@viveenarmonia.com.mx"><i class="fa fa-envelope"></i> info@loredoyasociados.com.mx</a></li>
+            <li class="list-group-item"><a href="mailto:info@viveenarmonia.com.mx" style="font-size: 12px;"><i class="fa fa-envelope"></i> info@loredoyasociados.com.mx</a></li>
             <li class="list-group-item"><a href="tel:3338801234"><i class="fa fa-phone"></i> (33) 3880 12 34</a></li>
             <li class="list-group-item"><a href="tel:3338801200"><i class="fa fa-print"></i> Fax (33) 3880 12 00</a></li>
         </ul>
