ajuste de slider y collapse no funcionaba, también ajuste la presentación de los servicios

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -59,6 +59,9 @@ body {
 .white {
   color: #fff !important;
 }
+.content {
+  margin-top: 100px;
+}
 .content-post {
   margin: 80px 0;
 }
@@ -168,7 +171,6 @@ header .logo {
   background-size: cover;
   height: 600px;
   background-repeat: no-repeat;
-  margin-top: 100px;
 }
 .carousel-caption {
   top: 25%;
@@ -372,7 +374,7 @@ header .logo {
   color: #555;
 }
 .recent-work-wrap > .titles h3 {
-  margin-top: 110px;
+  margin-top: 170px;
 }
 .recent-work-wrap > .titles {
   border: 1px solid rgba(255,255,255,0.2);
@@ -397,7 +399,7 @@ header .logo {
 }
 .recent-work-wrap {
   position: relative;
-  height: 250px;
+  height: 350px;
   background-size: cover;
   background-position: center center;
 }
@@ -1012,7 +1014,7 @@ color
     border-top: 1px solid #f5f5f5;
   }
   .carousel-inner > .item > img {
-    height: 600px;
+    height: 620px;
   }
   .recent-work-wrap {
     margin: 5px;
@@ -1127,16 +1129,13 @@ color
   }
   .navbar-nav {
     background: #fff;
-    margin-top: 20px;
+    margin-top: 50px;
     box-shadow: 0 4px 5px rgba(0,0,0,0.3);
     border-top: 1px solid #f5f5f5;
   }
-  header .navbar-default {
-    background: #fff;
-  }
   header .logo {
-    margin-top: 15px;
-    width: 230px;
+    margin-top: 5px;
+    width: auto;
   }
   h2.title-outstanding {
     font-size: 16px !important;
