--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -62,7 +62,8 @@ body
   color white !important
 
 /************** Grid css******************/
-
+.content
+  margin-top 100px
 .content-post
   margin 80px 0
 
@@ -159,7 +160,6 @@ header
   background-size cover
   height 600px
   background-repeat no-repeat
-  margin-top 100px
 .carousel-caption
   top 25%
   width 60%
@@ -331,7 +331,7 @@ header
   h3
     color #555
 .recent-work-wrap > .titles h3
-  margin-top 110px
+  margin-top 170px
 .recent-work-wrap > .titles
   border 1px solid rgba(255,255,255,0.2)
   position absolute
@@ -352,7 +352,7 @@ header
 
 .recent-work-wrap
   position relative
-  height 250px
+  height 350px
   background-size cover
   background-position center center
 
