--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -129,7 +129,7 @@
     border-top 1px solid #f5f5f5
 
   .carousel-inner > .item > img
-    height 600px
+    height 620px
 
   .recent-work-wrap
     margin 5px
@@ -223,14 +223,12 @@
     border none
   .navbar-nav
     background #fff
-    margin-top 20px
+    margin-top 50px
     box-shadow 0 4px 5px rgba(0,0,0,0.3)
     border-top 1px solid #f5f5f5
-  header .navbar-default
-    background white
   header .logo
-    margin-top 15px
-    width 230px
+    margin-top 5px
+    width auto
   h2.title-outstanding
     font-size 16px !important
     padding 20px 10px !important
