ajuste de estilo responsivo en carousel

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1041,6 +1041,12 @@ color
   }
 }
 @media only screen and (max-width: 767px) {
+  .carousel-caption h3 {
+    font-size: 22px;
+  }
+  .carousel-caption p {
+    font-size: 18px;
+  }
   .boxes-project {
     margin-bottom: 15px;
     text-align: center;
