--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -137,6 +137,7 @@
   .carousel-caption
     top 15%
 
+
   .recent-work-wrap > .titles
     padding 35px 20px 10px
 
@@ -158,6 +159,10 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .carousel-caption h3
+    font-size 22px
+  .carousel-caption p
+    font-size 18px
   .boxes-project
     margin-bottom 15px
     text-align center
